[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_enemy_script"]

[sub_resource type="CapsuleShape3D" id="1_body_shape"]
radius = 0.35
height = 1.0

[sub_resource type="CapsuleMesh" id="2_body_mesh"]
radius = 0.35
height = 1.0

[sub_resource type="SphereShape3D" id="3_head_shape"]
radius = 0.18

[sub_resource type="SphereMesh" id="4_head_mesh"]
radius = 0.18

[sub_resource type="SphereMesh" id="5_shield_mesh"]
radius = 0.65
height = 1.3

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_enemy_script")
collision_layer = 2
collision_mask = 1
use_model_wrapper = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("1_body_shape")
position = Vector3(0, 0.5, 0)

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("2_body_mesh")
position = Vector3(0, 0.5, 0)

[node name="VisualAnchor" type="Node3D" parent="."]

[node name="HeadArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 1
position = Vector3(0, 1.15, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HeadArea"]
shape = SubResource("3_head_shape")

[node name="HeadMesh" type="MeshInstance3D" parent="HeadArea"]
mesh = SubResource("4_head_mesh")

[node name="ShieldMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("5_shield_mesh")
position = Vector3(0, 0.6, 0)
